# GBA-Emulator

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/cpu/: arm.rs  instructions.rs  luts.rs  mod.rs  registers.rs  tests.rs  thumb.rs
core/src/cpu/arm/: mod.rs  tests.rs
core/src/cpu/thumb/: mod.rs  tests.rs
core/src/gba/: mod.rs
core/src/io/: memory.rs  mod.rs  rom.rs  scheduler.rs
core/src/io/apu/: audio.rs  mod.rs  registers.rs
core/src/io/apu/channel/: components.rs  dma_sound.rs  mod.rs  noise.rs  tone.rs  wave.rs
core/src/io/cart_backup/: eeprom.rs  flash.rs  mod.rs  sram.rs
core/src/io/dma/: mod.rs  registers.rs
core/src/io/gpio/: mod.rs  rtc.rs
core/src/io/interrupt_controller/: mod.rs  registers.rs
core/src/io/keypad/: mod.rs  registers.rs
core/src/io/ppu/: debug.rs  layers.rs  mod.rs  registers.rs
core/src/io/timers/: mod.rs  registers.rs
core/src/mmu/: memory.rs  mod.rs
core/src/mmu/interrupt_controller/: mod.rs  registers.rs
core/src/mmu/keypad/: mod.rs  registers.rs
core/src/mmu/ppu/: layers.rs  mod.rs  registers.rs
src/: debug.rs  display.rs  glfw_display.rs  main.rs  sdl_screen.rs
